# mcp-testkit

./: AGENTS.md  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-05-mcp-test-server-design.md
mcp_test_server/: __init__.py  api.py  server.py
mcp_test_server/tools/: __init__.py  collection_tools.py  conversion_tools.py  datetime_tools.py  echo_tools.py  encoding_tools.py  math_tools.py  string_tools.py  validation_tools.py
tests/: test_api.py  test_collection_tools.py  test_conversion_tools.py  test_datetime_tools.py  test_e2e.py  test_echo_tools.py  test_encoding_tools.py  test_integration.py  test_math_tools.py  test_string_tools.py  test_validation_tools.py
tools/: __init__.py  collection_tools.py  conversion_tools.py  datetime_tools.py  echo_tools.py  encoding_tools.py  math_tools.py  string_tools.py  validation_tools.py
