[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-test-server"
version = "0.1.0"
description = "MCP test server with 65 deterministic tools for protocol testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AgentSpan" },
]
keywords = ["mcp", "model-context-protocol", "testing", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests",
]

[project.urls]
Repository = "https://github.com/agentspan-dev/mcp-test-server"

[project.scripts]
mcp-test-server = "mcp_test_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_test_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
